[gd_scene load_steps=4 format=3 uid="uid://1xfpd777g8pf"]

[ext_resource type="Script" path="res://addons/block_code/ui/blocks/utilities/template_editor/collapsable_settings.gd" id="1_f0ssn"]
[ext_resource type="Texture2D" uid="uid://cd243la33evh" path="res://addons/block_code/ui/blocks/utilities/template_editor/plus.svg" id="2_mp58d"]
[ext_resource type="Texture2D" uid="uid://dmplpvmlpcdrk" path="res://addons/block_code/ui/blocks/utilities/template_editor/minus.svg" id="3_adq5s"]

[node name="CollapsableSettings" type="HBoxContainer"]
offset_right = 36.0
offset_bottom = 31.0
script = ExtResource("1_f0ssn")

[node name="ExpandSettingsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_mp58d")
flat = true
icon_alignment = 1

[node name="CollapseSettingsButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = ExtResource("3_adq5s")
flat = true
icon_alignment = 1
